Add indiced commands help

--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,10 @@ help_message: |
     <b>Сутты палийского канона</b>
 
     Получить случайную сутту из раздела:
-    {command_text}
+    {random_command_text}
+
+    Получить сутту из раздела по порядковому номеру:
+    {index_command_text}
 
     О боте: /about
     Это сообщение: /help
